# machine-learning-journal

./: README.md  pyproject.toml
src/fundamentals/confusion-matrix/: README.md
src/fundamentals/confusion-matrix/lib/: main.ipynb
src/fundamentals/confusion-matrix/scratch/: main.ipynb
src/fundamentals/cross-validation/: README.md
src/fundamentals/cross-validation/lib/: main.ipynb  main.py
src/fundamentals/cross-validation/scratch/: main.ipynb  main.py
src/machine_learning_journal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/setup/: config.py
